--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,18 @@
 %div(data-role="page")
   %div(data-role="header")
     %h1
-      Hello world
+      *waveee*
   %div(data-role="content")
-    %p
-      The app is alive now! Excellent.
+    %ul(data-role="listview" data-inset="true" data-filter="true")
+      %li
+        %a(href="#")
+          Hello
+      %li
+        %a(href="#")
+          Panda
+      %li
+        %a(href="#")
+          Pandaballs
+      %li
+        %a(href="#")
+          Mantis
