Explore basic page transition, back buttons and lists

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,12 +1,12 @@
 %div(data-role="page")
   %div(data-role="header")
     %h1
-      *waveee*
+      IPS Solutions
   %div(data-role="content")
     %ul(data-role="listview" data-inset="true" data-filter="true")
       %li
-        %a(href="#")
-          Hello
+        %a(href="#contact-us" data-transition="slide")
+          Contact Us
       %li
         %a(href="#")
           Panda
@@ -16,3 +16,10 @@
       %li
         %a(href="#")
           Mantis
+
+%div#contact-us(data-role="page" data-add-back-btn="true")
+  %div(data-role="header" data-theme="e")
+    %h1
+      Contact Us
+  %div(data-role="content")
+    %p Contact us goes here
