Use font awesome for icons

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,21 +1,11 @@
-%div(data-role="page")
+%div.screen-home(data-role="page")
   %div(data-role="header")
     %h1
       IPS Solutions
   %div(data-role="content")
-    %ul(data-role="listview" data-inset="true" data-filter="true")
-      %li
-        %a(href="#contact-us" data-transition="slide")
-          Contact Us
-      %li
-        %a(href="#")
-          Panda
-      %li
-        %a(href="#")
-          Pandaballs
-      %li
-        %a(href="#")
-          Mantis
+    %div(style="font-size: 24px;")
+      %i.icon-camera-retro
+      icon-camera-retro
 
 %div#contact-us(data-role="page" data-add-back-btn="true")
   %div(data-role="header" data-theme="e")
