Add basic icons and grid view

--- a/app/assets/stylesheets/_screen.sass
+++ b/app/assets/stylesheets/_screen.sass
@@ -1,3 +1,13 @@
 // _screen.sass
 
- .screen-home 
+#home
+  .logo
+    margin: 0 auto
+    background: asset_url("logo.png", image) no-repeat left top
+    width: 224px
+    height: 30px
+  i
+    display: block
+    text-align: center
+    font-size: 30px
+
