--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,11 +1,22 @@
-%div.screen-home(data-role="page")
-  %div(data-role="header")
-    %h1
-      IPS Solutions
+%div#home(data-role="page")
   %div(data-role="content")
     %div(style="font-size: 24px;")
-      %i.icon-camera-retro
-      icon-camera-retro
+      .logo
+      %p.blurb
+        IPS Strata Solutions is a Sydney based strata and commercial cleaning company. We aim to provide 100% satisfaction to our clients by providing timely, high quality and cost effective cleaning solutions. 
+      %div.ui-grid-a
+        %div.ui-block-a
+          %i.icon-wrench
+          Services
+        %div.ui-block-b
+          %i.icon-check
+          Portfolio
+        %div.ui-block-a
+          %i.icon-info-sign
+          About Us
+        %div.ui-block-b
+          %i.icon-phone
+          Contact Us
 
 %div#contact-us(data-role="page" data-add-back-btn="true")
   %div(data-role="header" data-theme="e")
