Testing fonts on heroku

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,6 @@
 %div#home(data-role="page")
   %div(data-role="content")
-    %div(style="font-size: 24px;")
+    %div
       .logo
       %p.blurb
         IPS Strata Solutions is a Sydney based strata and commercial cleaning company. We aim to provide 100% satisfaction to our clients by providing timely, high quality and cost effective cleaning solutions. 
