Fix initial scale with meta tag

--- a/app/assets/stylesheets/_screen.sass
+++ b/app/assets/stylesheets/_screen.sass
@@ -6,8 +6,8 @@
     background: asset_url("logo.png", image) no-repeat left top
     width: 224px
     height: 30px
-  i
+  i, a
     display: block
     text-align: center
+  i
     font-size: 120px
-
