--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,19 +7,25 @@
       %div.ui-grid-a
         %div.ui-block-a
           %i.icon-wrench
-          Services
+          %a(href="#contact-us" data-transition="slide")
+            Services
         %div.ui-block-b
           %i.icon-check
-          Portfolio
+          %a(href="#contact-us" data-transition="slide")
+            Portfolio
         %div.ui-block-a
           %i.icon-info-sign
-          About Us
+          %a(href="#contact-us" data-transition="slide")
+            About Us
         %div.ui-block-b
           %i.icon-phone
-          Contact Us
+          %a(href="#contact-us" data-transition="slide")
+            Contact Us
 
-%div#contact-us(data-role="page" data-add-back-btn="true")
+%div#contact-us(data-role="page")
   %div(data-role="header" data-theme="e")
+    %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
+      Home
     %h1
       Contact Us
   %div(data-role="content")
