Finding the best font size

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,7 @@
     %div
       .logo
       %p.blurb
-        IPS Strata Solutions is a Sydney based strata and commercial cleaning company. We aim to provide 100% satisfaction to our clients by providing timely, high quality and cost effective cleaning solutions. 
+        IPS Strata Solutions is a Sydney based strata and commercial cleaning company.
       %div.ui-grid-a
         %div.ui-block-a
           %i.icon-wrench
