--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,7 +7,7 @@
       %div.ui-grid-a
         %div.ui-block-a
           %a(href="#contact-us" data-transition="slide")
-            %i.icon-check
+            %i.icon-wrench
             Services
         %div.ui-block-b
           %a(href="#contact-us" data-transition="slide")
@@ -23,7 +23,7 @@
             Contact Us
 
 %div#contact-us(data-role="page")
-  %div(data-role="header" data-theme="e")
+  %div(data-role="header" data-theme="b")
     %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
       Home
     %h1
