Add basic content

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,21 +6,42 @@
         IPS Strata Solutions is a Sydney based strata and commercial cleaning company.
       %div.ui-grid-a
         %div.ui-block-a
-          %a(href="#contact-us" data-transition="slide")
+          %a(href="#services" data-transition="slide")
             %i.icon-wrench
             Services
         %div.ui-block-b
-          %a(href="#contact-us" data-transition="slide")
-            %i.icon-check
+          %a(href="#about-us" data-transition="slide")
+            %i.icon-info-sign
             Portfolio
         %div.ui-block-a
-          %a(href="#contact-us" data-transition="slide")
-            %i.icon-info-sign
+          %a(href="#portfolio" data-transition="slide")
+            %i.icon-check
             About Us
         %div.ui-block-b
           %a(href="#contact-us" data-transition="slide")
             %i.icon-phone
             Contact Us
+
+
+
+%div#portfolio(data-role="page")
+  %div(data-role="header" data-theme="b")
+    %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
+      Home
+    %h1
+      Portfolio
+  %div(data-role="content")
+    %p
+      Over 30% of our business comes from client referrals. 
+
+    %p
+      We are proud to service some of the most reputable companies in their fields, as well as many satisfied private customers.
+
+    %p
+      We are so committed to our excellent service that we encourage you to contact our clients and ask them for a testimonial of our services.
+
+
+
 
 %div#contact-us(data-role="page")
   %div(data-role="header" data-theme="b")
@@ -29,4 +50,75 @@
     %h1
       Contact Us
   %div(data-role="content")
-    %p Contact us goes here
+
+    %address.street
+      PS Strata Solutions<br />
+      PO Box 126<br />
+      ENFIELD NSW 2136
+
+    %p
+      Please do not hesitate to call us for an obligation-free quote. We are happy to discuss your cleaning requirements and can come up with a solution suited to your needs. 
+
+    %p
+      For all enquiries, please contact us via:   
+
+    %address.contact
+      Phone:  (02) 9703 6850<br />
+      Fax:    (02) 9703 6850<br />
+      Mobile:   0415 888 009<br />
+      Email: <a href="mailto:sebastian@ipssolutions.com.au">sebastian@ipssolutions.com.au</a>
+
+
+%div#services(data-role="page")
+  %div(data-role="header" data-theme="b")
+    %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
+      Home
+    %h1
+      Services
+  %div(data-role="content")
+    %p
+      IPS Strata Solutions is quickly building up a reputation for delivering quality service and timely solutions for the maintenance needs of property managers and commercial customers.
+
+    %p
+      If you would like to speak to us about organising repair work or create an on-going maintenance plan, please do not hesitate to contact us.
+
+    %p
+      Our services can be fully customised to meet your needs and budget. You can decide on the frequency, duration and time of any of the services we provide.
+
+    %p
+      We perform:    
+
+    %ul
+      %li
+        Strata cleaning
+      %li
+        Commercial cleaning
+      %li
+        Carpet cleaning
+      %li
+        Pressure cleaning
+      %li
+        Graffiti removal
+      %li
+        Gardening
+      %li
+        Rubbish removal
+      %li
+        Handyman work 
+
+%div#about-us(data-role="page")
+  %div(data-role="header" data-theme="b")
+    %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
+      Home
+    %h1
+      About Us
+  %div(data-role="content")
+
+    %p
+      IPS Strata Solutions was established in September 2009 in Enfield, Sydney. Since then we have serviced clients throughout the Inner West and provide both office and strata cleaning solutions in suburbs from Lane Cove to Hornsby and Epping.
+
+    %p
+      We are Occupational Health &amp; Safety aware, trained and compliant. We observe OH&amp;S legislation and regulations to ensure that your property is safe and comfortable for its occupants.
+
+    %p
+      Our stringent recruitment process ensures that all cleaners servicing your property are professionally trained to ensure you receive consistently high quality cleaning solutions.
