Retina display images and redesign of homepage

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -4,7 +4,7 @@
       .logo
       %p.blurb
         IPS Strata Solutions is a Sydney based strata and commercial cleaning company.
-      %div.ui-grid-a
+      %div.links.ui-grid-a
         %div.ui-block-a
           %a(href="#services" data-transition="slide")
             %i.icon-wrench
