--- a/app/assets/stylesheets/_screen.sass
+++ b/app/assets/stylesheets/_screen.sass
@@ -3,19 +3,41 @@
 @import compass
 
 #home
+  color: white
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5)
+  background: #004e96 asset_url("header-bg.png", image) repeat-x left top
   .logo
-    margin: 0 auto
+    margin-top: 56px
+    margin-bottom: 35px
+    margin-left: auto
+    margin-right: auto
     background: asset_url("logo.png", image) no-repeat left top
-    width: 224px
-    height: 30px
+    width: 233px
+    height: 23px
+  .links div
+    margin-top: 15px
+  .blurb
+    margin-bottom: 0
   a
     display: block
     text-align: center
-    color: #999
+    color: white
+    text-shadow: none
+    text-decoration: none
   i
-    color: #2489CE
+    color: #d7ecff
     display: block
     text-align: center
-    font-size: 70px
+    font-size: 50px
     text-decoration: none
-    +text-shadow(rgba(0, 0, 0, 0.3) 0px 0px 8px,rgba(0, 0, 0, 0.2) 0px -1px 0px)
+    +text-shadow(rgba(232, 244, 255, 0.3) 0px 0px 8px, rgba(0, 0, 0, 0.2) 0px -1px 0px)
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2)
+  #home
+    background: #004e96 asset_url("header-bg-x2.png", image) repeat-x left top
+    background-size: auto 111px
+    .logo
+      background: asset_url("logo-x2.png", image) no-repeat left top
+      background-size: 100% 100%
+      width: 233px
+      height: 23px
