--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -21,6 +21,9 @@
           %a(href="#contact-us" data-transition="slide")
             %i.icon-phone
             Contact Us
+      %div.accreditations
+        %div.trademonitor
+        %div.strata
 
 
 
