Contact form view

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -55,7 +55,7 @@
   %div(data-role="content")
 
     %address.street
-      PS Strata Solutions<br />
+      IPS Strata Solutions<br />
       PO Box 126<br />
       ENFIELD NSW 2136
 
@@ -70,6 +70,36 @@
       Fax:    (02) 9703 6850<br />
       Mobile:   0415 888 009<br />
       Email: <a href="mailto:sebastian@ipssolutions.com.au">sebastian@ipssolutions.com.au</a>
+
+    %p
+      Otherwise, please fill out our form and we will get back to you as quickly as possible. Be sure to leave at least one form of contact.
+
+    %form
+      .input-group.name
+        %label(for="name")
+          Name
+        %input(type="text" id="name")
+      .input-group.email
+        %label(for="email")
+          Email
+        %input(type="text" id="email")
+      .input-group.mobile
+        %label(for="mobile")
+          Mobile
+        %input(type="text" id="mobile")
+      .input-group.address
+        %label(for="address")
+          Address
+        %input(type="text" id="mobile")
+      .input-group.message
+        %label(for="message")
+          Enquiry
+        %textarea(id="message")
+          Please type your enquiry here
+      .input-group.actions
+        %input(type="submit" value="Send")
+
+
 
 
 %div#services(data-role="page")
@@ -118,7 +148,7 @@
   %div(data-role="content")
 
     %p
-      IPS Strata Solutions was established in September 2009 in Enfield, Sydney. Since then we have serviced clients throughout the Inner West and provide both office and strata cleaning solutions in suburbs from Lane Cove to Hornsby and Epping.
+      IPS Strata Solutions was established in September 2009 in Enfield, Sydney. Since then we have serviced clients throughout the Inner West and provide both office and strata cleaning solutions in suburbs from Homebush to Woolstonecraft to Rose Bay to Bondi and Drummoyne.
 
     %p
       We are Occupational Health &amp; Safety aware, trained and compliant. We observe OH&amp;S legislation and regulations to ensure that your property is safe and comfortable for its occupants.
