--- a/app/assets/stylesheets/_screen.sass
+++ b/app/assets/stylesheets/_screen.sass
@@ -46,7 +46,11 @@
     height: 50px
     background: asset_url("strata.png", image) no-repeat left top
     margin-right: 5px
-    
+
+// Forms
+form
+  .input-group
+    margin-bottom: 16px
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2)
   #home
