Create Enquiry model and setup mailer

--- a/app/assets/stylesheets/_screen.sass
+++ b/app/assets/stylesheets/_screen.sass
@@ -52,6 +52,15 @@ form
   .input-group
     margin-bottom: 16px
 
+// Alerts and global messages
+.alert
+  border: 1px solid #9fff85
+  background: #c5ffb5
+  padding: 10px
+  color: black
+  text-shadow: none
+
+
 @media only screen and (-webkit-min-device-pixel-ratio: 2)
   #home
     background: #004e96 asset_url("header-bg-x2.png", image) repeat-x left top
