--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,6 +2,9 @@
   %div(data-role="content")
     %div
       .logo
+      - if flash[:alert]
+        %p.alert
+          = flash[:alert]
       %p.blurb
         IPS Strata Solutions is a Sydney based strata and commercial cleaning company.
       %div.links.ui-grid-a
@@ -71,28 +74,22 @@
     %p
       Otherwise, please fill out our form and we will get back to you as quickly as possible. Be sure to leave at least one form of contact.
 
-    %form
+    =form_for @enquiry, :url => { :action => "enquiry" } do |f|
       .input-group.name
-        %label(for="name")
-          Name
-        %input(type="text" id="name")
+        = f.label(:name)
+        = f.text_field(:name)
       .input-group.email
-        %label(for="email")
-          Email
-        %input(type="text" id="email")
+        = f.label(:email)
+        = f.text_field(:email)
       .input-group.mobile
-        %label(for="mobile")
-          Mobile
-        %input(type="text" id="mobile")
+        = f.label(:mobile)
+        = f.text_field(:mobile)
       .input-group.address
-        %label(for="address")
-          Address
-        %input(type="text" id="mobile")
+        = f.label(:address)
+        = f.text_field(:address)
       .input-group.message
-        %label(for="message")
-          Enquiry
-        %textarea(id="message")
-          Please type your enquiry here
+        = f.label(:message)
+        = f.text_area :message, :value => "Please type your enquiry here"
       .input-group.actions
         %input(type="submit" value="Send")
 
