Past clients in portfolio view

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -46,6 +46,31 @@
     %p
       We are so committed to our excellent service that we encourage you to contact our clients and ask them for a testimonial of our services.
 
+    %p
+      Clients of ours include:
+    %ul
+      %li
+        Prolet
+      %li
+        NIR Technology
+      %li
+        Premium Strata
+      %li
+        Strathfield Strata
+      %li
+        Net Strata
+      %li
+        BCSSN
+      %li
+        Innovative Production Services
+      %li
+        Vision International Forwarding
+      %li
+        Star East International
+      %li
+        Sam Nasti Solicitors
+
+
 %div#contact-us(data-role="page")
   %div(data-role="header" data-theme="b")
     %a(href="#home" data-transition="slide" data-direction="reverse" data-icon="arrow-l")
